--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="theme-color" content="#ffffff">
 </head>
-<body><iframe src="https://www.youtube.com/embed/dm2RF8ACVrw" frameborder="0" allowfullscreen></iframe></body>
+<body style="margin:0;"><iframe src="https://www.youtube.com/embed/dm2RF8ACVrw" frameborder="0" allowfullscreen style="width:100%; height:100%;"></iframe></body>
 </html>
