--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta property="og:title" content="Jerry Temporary">
 <meta property="og:url" content="http://www.useless.accountants/">
 <meta property="og:image" content="http://www.useless.accountants/android-chrome-512x512.png">
-<meta property="music:album:url" content="https://play.google.com/music/preview/Blmqyfxklr3f4wyb56u4nvixqli">
+<meta property="music:album:url" content="http://play.google.com/music/preview/Blmqyfxklr3f4wyb56u4nvixqli">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
