--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   sound9
   </div>
   <div id="body">
-    Talk as Kyōko! Please be nice.
+    Talk as Kyōko! Please be nice.<br>
     <input id="message" type="text" placeholder="Message">
-    <button id="send" onclick="send()">Send</button>
+    <button id="send" onclick="send()">Send</button><br>
     Everyone is Kyōko, so noone is Kyōko.<br>That's what I think.
   </div>
   <div id="footer">
